# internal/subscription/endpoints/delete_subscription.go
@@ -5,6 +5,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/go-kit/kit/endpoint"
 	kithttp "github.com/go-kit/kit/transport/http"
@@ -14,15 +15,32 @@ import (
 	"github.com/sumelms/microservice-course/pkg/validator"
 )
 
-type deleteSubscriptionRequest struct {
+type DeleteSubscriptionRequest struct {
 	UUID   uuid.UUID `json:"uuid"   validate:"required"`
 	Reason string    `json:"reason" validate:"required"`
 }
 
-type deleteSubscriptionResponse struct {
-	Subscription *domain.Subscription `json:"subscription"`
+type DeletedSubscriptionResponse struct {
+	UUID      uuid.UUID `json:"uuid"`
+	Reason    string    `json:"reason"`
+	DeletedAt time.Time `json:"deleted_at"`
 }
 
+type DeleteSubscriptionResponse struct {
+	Subscription *DeletedSubscriptionResponse `json:"subscription"`
+}
+
+// NewDeleteSubscriptionHandler deletes subscription handler
+// @Summary      Delete subscription
+// @Description  Delete a new subscription
+// @Tags         subscriptions
+// @Produce      json
+// @Param        uuid	  path      string  true  "Subscription UUID" Format(uuid)
+// @Success      200      {object}  DeleteSubscriptionResponse
+// @Failure      400      {object}  error
+// @Failure      404      {object}  error
+// @Failure      500      {object}  error
+// @Router       /subscriptions/{uuid} [delete].
 func NewDeleteSubscriptionHandler(s domain.ServiceInterface, opts ...kithttp.ServerOption) *kithttp.Server {
 	return kithttp.NewServer(
 		makeDeleteSubscriptionEndpoint(s),
@@ -34,7 +52,7 @@ func NewDeleteSubscriptionHandler(s domain.ServiceInterface, opts ...kithttp.Ser
 
 func makeDeleteSubscriptionEndpoint(s domain.ServiceInterface) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
-		req, ok := request.(deleteSubscriptionRequest)
+		req, ok := request.(DeleteSubscriptionRequest)
 		if !ok {
 			return nil, fmt.Errorf("invalid argument")
 		}
@@ -44,7 +62,7 @@ func makeDeleteSubscriptionEndpoint(s domain.ServiceInterface) endpoint.Endpoint
 			return nil, err
 		}
 
-		var sub domain.Subscription
+		var sub domain.DeletedSubscription
 		data, _ := json.Marshal(req)
 		if err := json.Unmarshal(data, &sub); err != nil {
 			return nil, err
@@ -54,8 +72,12 @@ func makeDeleteSubscriptionEndpoint(s domain.ServiceInterface) endpoint.Endpoint
 			return nil, err
 		}
 
-		return deleteSubscriptionResponse{
-			Subscription: &sub,
+		return DeleteSubscriptionResponse{
+			Subscription: &DeletedSubscriptionResponse{
+				UUID:      sub.UUID,
+				Reason:    sub.Reason,
+				DeletedAt: sub.DeletedAt,
+			},
 		}, nil
 	}
 }
@@ -67,7 +89,7 @@ func decodeDeleteSubscriptionRequest(_ context.Context, r *http.Request) (interf
 		return nil, fmt.Errorf("invalid argument")
 	}
 
-	var req deleteSubscriptionRequest
+	var req DeleteSubscriptionRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		return nil, err
 	}
