# internal/subscription/endpoints/find_subscription.go
@@ -12,14 +12,25 @@ import (
 	"github.com/sumelms/microservice-course/internal/subscription/domain"
 )
 
-type findSubscriptionRequest struct {
+type FindSubscriptionRequest struct {
 	UUID uuid.UUID `json:"uuid"`
 }
 
-type findSubscriptionResponse struct {
-	Subscription *domain.Subscription `json:"subscription"`
+type FindSubscriptionResponse struct {
+	Subscription *SubscriptionResponse `json:"subscription"`
 }
 
+// NewFindSubscriptionHandler find subscription handler
+// @Summary      Find subscription
+// @Description  Find a new subscription
+// @Tags         subscriptions
+// @Produce      json
+// @Param        uuid	  path      string  true  "Subscription UUID" Format(uuid)
+// @Success      200      {object}  FindSubscriptionResponse
+// @Failure      400      {object}  error
+// @Failure      404      {object}  error
+// @Failure      500      {object}  error
+// @Router       /subscriptions/{uuid} [get].
 func NewFindSubscriptionHandler(s domain.ServiceInterface, opts ...kithttp.ServerOption) *kithttp.Server {
 	return kithttp.NewServer(
 		makeFindSubscriptionEndpoint(s),
@@ -31,7 +42,7 @@ func NewFindSubscriptionHandler(s domain.ServiceInterface, opts ...kithttp.Serve
 
 func makeFindSubscriptionEndpoint(s domain.ServiceInterface) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
-		req, ok := request.(findSubscriptionRequest)
+		req, ok := request.(FindSubscriptionRequest)
 		if !ok {
 			return nil, fmt.Errorf("invalid argument")
 		}
@@ -41,8 +52,17 @@ func makeFindSubscriptionEndpoint(s domain.ServiceInterface) endpoint.Endpoint {
 			return nil, err
 		}
 
-		return &findSubscriptionResponse{
-			Subscription: &sub,
+		return CreateSubscriptionResponse{
+			Subscription: &SubscriptionResponse{
+				UUID:       sub.UUID,
+				UserUUID:   sub.UserUUID,
+				CourseUUID: sub.CourseUUID,
+				MatrixUUID: sub.MatrixUUID,
+				Role:       sub.Role,
+				ExpiresAt:  sub.ExpiresAt,
+				CreatedAt:  sub.CreatedAt,
+				UpdatedAt:  sub.UpdatedAt,
+			},
 		}, nil
 	}
 }
@@ -56,7 +76,7 @@ func decodeFindSubscriptionRequest(_ context.Context, r *http.Request) (interfac
 
 	uid := uuid.MustParse(id)
 
-	return findSubscriptionRequest{UUID: uid}, nil
+	return FindSubscriptionRequest{UUID: uid}, nil
 }
 
 func encodeFindSubscriptionResponse(ctx context.Context, w http.ResponseWriter, response interface{}) error {
